--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       <img class="rounded-5 shadow" src="images/manic/01.webp" alt="Image">
       <img class="rounded-5 shadow" src="images/manic/02.jpg" alt="Image">
       <img class="rounded-5 shadow" src="images/manic/03.jpg" alt="Image">
-      <a class="btn btn-warning fw-bold shadow rounded-pill" type="button" href="tel:+380994326587">Contac</a>
+      <a class="btn btn-warning fw-bold shadow rounded-pill" type="button" href="tel:+380994326587">Contact</a>
     </div>
   </div>
 
@@ -66,7 +66,7 @@
       <img class="rounded-5 shadow" src="images/makeup/01.jpg" alt="Image">
       <img class="rounded-5 shadow" src="images/makeup/02.webp" alt="Image">
       <img class="rounded-5 shadow" src="images/makeup/03.webp" alt="Image">
-      <a class="btn btn-warning fw-bold shadow rounded-pill" type="button" href="tel:+380994326588">Contac</a>
+      <a class="btn btn-warning fw-bold shadow rounded-pill" type="button" href="tel:+380994326588">Contact</a>
     </div>
   </div>
 
@@ -79,7 +79,7 @@
       <img class="rounded-5 shadow" src="images/hair/01.jpg" alt="Image">
       <img class="rounded-5 shadow" src="images/hair/02.jpg" alt="Image">
       <img class="rounded-5 shadow" src="images/hair/03.jpg" alt="Image">
-      <a class="btn btn-warning fw-bold shadow rounded-pill" type="button" href="tel:+380994326589">Contac</a>
+      <a class="btn btn-warning fw-bold shadow rounded-pill" type="button" href="tel:+380994326589">Contact</a>
     </div>
   </div>
 
